--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "framer-motion": "^10.16.5",
@@ -30,6 +31,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/html2canvas": "^0.5.35",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.5",
