--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
+    "lucide-react": "^0.544.0",
     "next": "14.0.4",
     "qrcode": "^1.5.4",
     "react": "^18",
