--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/papaparse": "^5.3.16",
     "axios": "^1.6.2",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
@@ -19,6 +20,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.544.0",
     "next": "14.0.4",
+    "papaparse": "^5.5.3",
     "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
